# sqlxvec_test

./: Cargo.toml  mydb.sqlite
src/: main.rs
src/db/: decode.rs  mod.rs  sqlite.rs
